[package]
name = "uno-cli"
version = "0.1.5"
edition = "2021"
description = "rust cli for uno game"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.5"
console = "0.15.7"
rand = "0.8.5"
